--- a/Perceptron Classifier/Perceptron Classifier/Perceptron Classifier.vcxproj
+++ b/Perceptron Classifier/Perceptron Classifier/Perceptron Classifier.vcxproj
@@ -97,6 +97,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="Output.txt" />
     <Text Include="README.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
